# isca-analysis

./: .gitattributes  COPYRIGHT.txt  LICENSE  README.md  pyproject.toml
data/: linear_no_sc_p4k_164.nc  linear_no_sc_pdc_164.nc  linear_park_p4k_166.nc  linear_park_p4k_43.nc  linear_park_pdc_008_152_jja.nc  papillon_control_slingo_0120.nc  papillon_fast_pdc_008_152_jja.nc  papillon_fast_pdc_152.nc  papillon_fast_pdc_24_notimeavg.nc  papillon_na_0_1_120.nc  papillon_na_1_0_120.nc  papillon_na_2_0_120.nc  papillon_random_vertical_120.nc  papillon_random_vertical_3h_time_120.nc  papillon_smith_ras_0120.nc  papillon_vertical_1km_0120.nc  smith_no_sc_pdc_43.nc
data/isca_means/: linear_park_diff.nc  linear_park_pdc_24.nc  linear_park_pdc_24_notimeavg.nc  linear_park_pdc_43.nc  papillon_control_108.nc  papillon_control_full_bm_0084.nc  papillon_control_ras_0084.nc  papillon_control_ras_0120.nc  papillon_control_with_clouds_0084.nc  papillon_control_xr96_eis_ras_0120.nc  papillon_fast_pdc_008_152.nc  papillon_full_bm_0084.nc  papillon_full_bm_0120.nc  papillon_ml_0048.nc  papillon_ml_0084.nc  papillon_na_0_1_0060.nc  papillon_na_1_0_0060.nc  papillon_ras_0084.nc  papillon_ras_0120.nc  papillon_smith_0120.nc  papillon_uniform_vertical_120.nc  papillon_xr96_eis_ras_0120.nc  smith_no_sc_166.nc  smith_no_sc_p4k_164.nc  smith_no_sc_pdc_152.nc  smith_no_sc_pdc_164.nc  sundqvist_no_sc_p4k_164.nc  sundqvist_no_sc_pdc_152.nc  sundqvist_no_sc_pdc_164.nc  xr96_no_sc_pdc_164.nc
src/isca_analysis/: 2d_analysis.py  __init__.py  check_papillon_pert.py  cloud_feedbacks.py  socrates_test.py  (+2 more)
